--- a/ide/src/main/resources/com/chiralbehaviors/CoRE/occular/view/FacetView.fxml
+++ b/ide/src/main/resources/com/chiralbehaviors/CoRE/occular/view/FacetView.fxml
@@ -32,9 +32,9 @@
       <Label text="Children" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
       <TableView fx:id="attributes" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
          <columns>
-            <TableColumn prefWidth="75.0" text="Name" />
-            <TableColumn prefWidth="75.0" text="Type" />
-            <TableColumn prefWidth="75.0" text="Default Value" />
+            <TableColumn fx:id="attributeNameColumn" prefWidth="75.0" text="Name" />
+            <TableColumn fx:id="attributeTypeColumn" prefWidth="75.0" text="Type" />
+            <TableColumn fx:id="defaultValueColumn" prefWidth="75.0" text="Default Value" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -54,10 +54,10 @@
       </TableView>
       <TableView fx:id="children" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
          <columns>
-            <TableColumn prefWidth="75.0" text="Cardinality" />
-            <TableColumn prefWidth="75.0" text="Name" />
-            <TableColumn prefWidth="92.0" text="Relationship" />
-            <TableColumn prefWidth="75.0" text="Child" />
+            <TableColumn fx:id="cardinalityColumn" prefWidth="75.0" text="Cardinality" />
+            <TableColumn fx:id="childNameColumn" prefWidth="75.0" text="Name" />
+            <TableColumn fx:id="relationshipColumn" prefWidth="92.0" text="Relationship" />
+            <TableColumn fx:id="childColumn" prefWidth="75.0" text="Child" />
          </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
