--- a/ide/src/main/resources/com/chiralbehaviors/CoRE/ocular/view/OcularView.fxml
+++ b/ide/src/main/resources/com/chiralbehaviors/CoRE/ocular/view/OcularView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chiralbehaviors.CoRE.occular.OccularController">
+<TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chiralbehaviors.CoRE.ocular.OcularController">
    <tabs>
       <Tab fx:id="workspace" text="Workspace">
          <content>
