--- a/ide/src/main/resources/com/chiralbehaviors/CoRE/ocular/view/WorkspaceView.fxml
+++ b/ide/src/main/resources/com/chiralbehaviors/CoRE/ocular/view/WorkspaceView.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chiralbehaviors.CoRE.occular.WorkspaceController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chiralbehaviors.CoRE.ocular.WorkspaceController">
    <left>
       <ListView fx:id="workspaces" prefWidth="350.0">
          <BorderPane.margin>
