workspace of ruleforms now defining product.
Renamed workspace authorization to workspace label.

--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency.xml
@@ -19,8 +19,8 @@
 			     r.version
 			   FROM existential r
 			   JOIN existential up ON r.updated_by = up.id
-             LEFT JOIN workspace_authorization wa ON r.workspace = wa.id
-             LEFT JOIN existential w ON wa.defining_product = w.id
+             LEFT JOIN existential w ON r.workspace = w.id
+             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = r.id
                WHERE r.domain = 'Agency'
             ]]>
         </createView>
