--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/existential_attribute_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/existential_attribute_authorization.xml
@@ -30,8 +30,8 @@
 			 LEFT JOIN existential b ON na.classification = b.id
 			 LEFT JOIN existential att ON base_table.authorized_attribute = att.id
 			 LEFT JOIN existential up ON base_table.updated_by = up.id
-             LEFT JOIN workspace_authorization wa ON base_table.workspace = wa.id
-             LEFT JOIN existential w ON wa.defining_product = w.id
+             LEFT JOIN existential w ON base_table.workspace = w.id
+             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = base_table.id
             ]]>
         </createView>
     </changeSet>
