--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/existential_network.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/existential_network.xml
@@ -24,8 +24,8 @@
 			   JOIN existential rel ON n.relationship = rel.id
 			   JOIN existential c ON n.child = c.id
 			   JOIN existential u ON n.updated_by = u.id
-             LEFT JOIN workspace_authorization wa ON n.workspace = wa.id
-             LEFT JOIN existential w ON wa.defining_product = w.id
+             LEFT JOIN existential w ON n.workspace = w.id
+             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = n.id
              WHERE n.inference IS NULL
             ]]>
         </createView>
