--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
@@ -35,8 +35,8 @@
                JOIN existential sc ON base_table.status = sc.id
                JOIN existential up ON base_table.updated_by = up.id
                JOIN existential u ON base_table.quantity_unit = u.id
-             LEFT JOIN workspace_authorization wa ON base_table.workspace = wa.id
-             LEFT JOIN existential w ON wa.defining_product = w.id
+             LEFT JOIN existential w ON base_table.workspace = w.id
+             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = base_table.id
             ]]></createView>
     </changeSet>
 </databaseChangeLog>
