--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/protocol.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/protocol.xml
@@ -51,8 +51,8 @@
                JOIN existential cdt ON base_table.child_deliver_to = cdt.id
                JOIN existential cdf ON base_table.child_deliver_from = cdf.id
                JOIN existential up ON base_table.updated_by = up.id
-               LEFT JOIN workspace_authorization wa ON base_table.workspace = wa.id
-               LEFT JOIN existential w ON wa.defining_product = w.id
+               LEFT JOIN existential w ON base_table.workspace = w.id
+             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = base_table.id
             ]]>
         </createView>
     </changeSet>
