--- a/ide/src/main/resources/com/chiralbehaviors/graphql/layout/autolayout.fxml
+++ b/ide/src/main/resources/com/chiralbehaviors/graphql/layout/autolayout.fxml
@@ -3,12 +3,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.layout.BorderPane?>
-<?import org.controlsfx.control.MasterDetailPane?>
+<?import org.controlsfx.control.HiddenSidesPane?>
 
 <BorderPane fx:id="root" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
-	<center>
-		<MasterDetailPane fx:id="masterDetail" detailSide="TOP" showDetailNode="false" BorderPane.alignment="CENTER" />
-	</center>
    <bottom>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <buttons>
@@ -18,4 +15,7 @@
          </buttons>
       </ButtonBar>
    </bottom>
+   <center>
+      <HiddenSidesPane fx:id="masterDetail" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
