--- a/ide/src/main/resources/com/chiralbehaviors/graphql/layout/graphiql.fxml
+++ b/ide/src/main/resources/com/chiralbehaviors/graphql/layout/graphiql.fxml
@@ -10,29 +10,34 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.web.WebView?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chiralbehaviors.graphql.layout.GraphiqlController">
+<BorderPane prefHeight="400.0" prefWidth="600.0"
+	xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="com.chiralbehaviors.graphql.layout.GraphiqlController">
 	<top>
 		<GridPane BorderPane.alignment="CENTER">
 			<columnConstraints>
 				<ColumnConstraints hgrow="SOMETIMES" prefWidth="496.0" />
-				<ColumnConstraints hgrow="NEVER" maxWidth="196.0" minWidth="7.0" prefWidth="45.0" />
-				<ColumnConstraints hgrow="NEVER" maxWidth="146.0" minWidth="10.0" prefWidth="59.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="196.0"
+					minWidth="7.0" prefWidth="45.0" />
+				<ColumnConstraints hgrow="NEVER" maxWidth="146.0"
+					minWidth="10.0" prefWidth="59.0" />
 			</columnConstraints>
 			<rowConstraints>
 				<RowConstraints vgrow="NEVER" />
 			</rowConstraints>
 			<children>
 				<TextField fx:id="url" />
-				<ProgressIndicator fx:id="loadProgress" prefHeight="40.0" prefWidth="106.0" progress="0.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-				<Button fx:id="close" mnemonicParsing="false" text="Close" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+				<ProgressIndicator fx:id="loadProgress"
+					prefHeight="40.0" prefWidth="106.0" progress="0.0"
+					GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+				<Button fx:id="close" mnemonicParsing="false" text="Close"
+					GridPane.columnIndex="2" GridPane.halignment="CENTER" />
 			</children>
 		</GridPane>
 	</top>
 	<center>
-		<AnchorPane BorderPane.alignment="CENTER">
-			<children>
-				<WebView fx:id="webview" prefHeight="360.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-			</children>
-		</AnchorPane>
+		<WebView fx:id="webview" AnchorPane.bottomAnchor="0.0"
+			AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+			AnchorPane.topAnchor="0.0" />
 	</center>
 </BorderPane>
