--- a/ide/src/main/resources/com/chiralbehaviors/graphql/layout/ide.html
+++ b/ide/src/main/resources/com/chiralbehaviors/graphql/layout/ide.html
@@ -10,26 +10,35 @@
 <html>
 <head>
 <style>
+body {
+	height: 100%;
+	margin: 0;
+	width: 100%;
+	overflow: hidden;
+}
+
 #graphiql {
-	height: 100vh;
+	height: 300vh;
 }
 </style>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/graphiql/0.7.1/graphiql.css" />
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/graphiql/0.7.0/graphiql.min.css" />
 <script src="http://cdn.jsdelivr.net/fetch/0.9.0/fetch.min.js"></script>
 <script src="http://cdn.jsdelivr.net/react/0.14.7/react.min.js"></script>
 <script src="http://cdn.jsdelivr.net/react/0.14.7/react-dom.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/graphiql/0.7.1/graphiql.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/graphiql/0.7.1/graphiql.min.js"></script>
 </head>
 <body>
 	<div id="graphiql">Loading...</div>
 	<script>
 		var parameters = {};
 		var targetURL = "http://graphql-swapi.parseapp.com/";
-		
+
 		function setTargetURL(url) {
-			targetURL = url;	
+			targetURL = url;
 		}
-		
+
 		function onEditQuery(newQuery) {
 			app.onEditQuery(newQuery);
 		}
@@ -39,7 +48,7 @@
 		function onEditOperationName(newOperationName) {
 			app.onEditOperationName(newOperationName);
 		}
-		
+
 		function graphQLFetcher(graphQLParams) {
 			return fetch(targetURL, {
 				method : 'post',
@@ -59,7 +68,7 @@
 				}
 			});
 		}
-		
+		// Render <GraphiQL /> into the body.
 		ReactDOM.render(React.createElement(GraphiQL, {
 			fetcher : graphQLFetcher,
 			query : parameters.query,
