set style classes correctly during layout.

--- a/ide/src/main/resources/nested.css
+++ b/ide/src/main/resources/nested.css
@@ -1,16 +1,16 @@
-.list-view {
+.auto-layout-nested-list {
     -fx-padding: 0 ;
     -fx-background-insets: 0, 1 ;
 }
 
-.list-cell {
+.auto-layout-nest-list-cell {
     -fx-padding: 0 ;
     -fx-background-color: transparent, -fx-background ;
     -fx-background-insets: 0, 1 ;
 }
 
-.list-cell:empty {
-    -fx-padding: 0 ;
+.auto-layout-nest-list-cell:empty {
+    -fx-padding: 1 ;
     -fx-background-color: transparent ;
     -fx-background-insets: 0, 1 ;
 }
