--- a/ide/src/main/resources/nested.css
+++ b/ide/src/main/resources/nested.css
@@ -1,16 +1,51 @@
-.auto-layout-nest-list {
+
+/*  Key nested list */
+.auto-layout-nest-key-list {
     -fx-padding: 0 ;
-    -fx-background-insets: 0, 1 ;
+    -fx-background-color: transparent ;
+    -fx-background-insets:0 ;
 }
 
-.auto-layout-nest-list-cell {
+.auto-layout-nest-key-list:empty {
     -fx-padding: 0 ;
+    -fx-background-color: transparent ;
+    -fx-background-insets:0 ;
+}
+
+/* Key nested list cell */
+.auto-layout-nest-key-list-cell {
+    -fx-padding: 0.0 ;
     -fx-background-color: transparent, -fx-background ;
-    -fx-background-insets: 0, 1 ;
+    -fx-background-insets:0 ;
+}
+
+.auto-layout-nest-key-list-cell:empty {
+    -fx-padding: 0 ;
+    -fx-background-color: transparent ;
+    -fx-background-insets:0 ;
+}
+
+/* Nested list */
+.auto-layout-nest-list {
+    -fx-padding: 0.0 ;
+    -fx-background-insets:0 ;
+}
+
+.auto-layout-nest-list:empty {
+    -fx-padding: 0 ;
+    -fx-background-color: transparent ;
+    -fx-background-insets:0 ;
+}
+
+/* Nested list cell */
+.auto-layout-nest-list-cell {
+    -fx-padding: 0.0 ;
+    -fx-background-color: transparent, -fx-background ;
+    -fx-background-insets:0 ;
 }
 
 .auto-layout-nest-list-cell:empty {
-    -fx-padding: 1 ;
+    -fx-padding: 0 ;
     -fx-background-color: transparent ;
-    -fx-background-insets: 0, 1 ;
+    -fx-background-insets:0 ;
 }
