--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/facet.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/facet.xml
@@ -11,18 +11,18 @@
                 n.name AS name,
                 classifier.name AS classifer, 
                 classification.name AS classification,
-                n.schema as schema,
+                jsonb_pretty(n.schema) as schema,
                 u.name AS updated_by, 
                 w.name AS workspace, n.id, 
                 wa.key AS wsp_key,
                 wa.description AS wsp_desc,
                 n.version
-               FROM facet n
-               JOIN existential classification ON n.classification = classification.id
-               JOIN existential classifier ON n.classifier = classifier.id
-               JOIN existential u ON n.updated_by = u.id
-             LEFT JOIN existential w ON n.workspace = w.id
-             LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = n.id
+             FROM facet n
+                JOIN existential classification ON n.classification = classification.id
+                JOIN existential classifier ON n.classifier = classifier.id
+                JOIN existential u ON n.updated_by = u.id
+                LEFT JOIN existential w ON n.workspace = w.id
+                LEFT JOIN workspace_label wa ON wa.workspace = w.id AND wa.reference = n.id
             ]]>
         </createView>
     </changeSet>
